Changes for 2.0.9rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Lithuanian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-6804] optimized min item clock calculation for graph; thanks to Volker Fröhlich (Eduard)
...G...... [ZBX-6902] reverting Solaris system.swap.size calculation from "swap -s" (used in 2.0.7, 2.0.8) to "swap -l"-like algorithm (as in 2.0.6) (Andris)
.......P.. [ZBX-6936] fixed MySQL errors when updating configuration of the proxy (Sasha)
.......P.. [ZBX-6929] fixed updating of lastlogsize and mtime in the proxy's database (Sasha)
..F....... [ZBX-6923] fixed mass delete in template list, 'Delete selected' and 'Delete selected with linked elements' functions (Vitalij)
..F....... [ZBX-6922] fixed host interface importing (Eduard)
.......P.. [ZBX-6249] fixed data loss in proxy "Data sender" process caused by unfinished transactions; thanks to MATSUDA Daiki for patch (Andris)
...G...... [ZBXNEXT-1056] improved active checks error messages (wiper)

--------------------------------------------------------------------------------
Changes for 2.0.8

2.0.8rc2 was released as 2.0.8 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.8rc2

Bug fixes:
........S. [ZBX-6889] fixed processing of availability data by the server (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.8rc1

New features:
...G...PS. [ZBXNEXT-1405] added IP to the warning about ignored messages because of their size (wiper)
A.F....... [ZBX-1357] updated Dutch translation; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-6020] fixed displaying MySQL errors for PHP 5.5.0 and newer (Ivo)
.......PS. [ZBX-6746] fixed template linking to proxy if the agent with the same name is auto-registered (igors)
..F....... [ZBX-6840] fixed undefined indexes for triggers in Monitoring > Maps and Dashboard (Ivo)